# eyeson

./: README.md  package-lock.json  package.json
.github/: conda.yml
.github/workflows/: aws.yml
backend/: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  test.py  test_chat.py
backend/data/: data.json  data_david.json  data_day.json  exhibit.json  exhibit_david.json  exhibit_day.json
backend/features/: faiss_idx.index  vgg16_features.pkl
backend/routers/: chat_router.py  description_router.py  metadata_router.py  search_router.py
backend/services/: chat_services.py  cnn_service.py  faiss_service.py  image_service.py  openai_service.py  s3_service.py
backend/static/: artChat.html  artChat_test.html  artwork.js  chatstyle.css  index.html  mouseZoom.js  nameParser.js  temp.html  timescript.js
backend/static/artChat_css/: artChat_style.css
backend/static/artChat_js/: ap-image-zoom.js  artChat_func_test.js  artChat_func_test2.js
backend/static/css/: artChat_style.css
eyeson/: ContentView.swift  ScanData.swift  ScannerView.swift  TextRecognizer.swift
eyeson.xcodeproj/: project.pbxproj
eyeson/bluetooth/: BLEManager.swift  bluetoothScan.swift  peripheral.swift
eyesonTests/: eyesonTests.swift
eyesonUITests/: eyesonUITestsLaunchTests.swift
img_search/: .gitignore  api.py  cnn_module.py  engid_api.py  faiss_module.py  final_test.py  gpt_plus_api.py  img_data_api.py  s3_module.py
img_search/data/: data.json  dummy.json
img_search/static/: index.html
ios/: Project.swift
ios-client/: Podfile
ios-client/eyeson/: Info.plist  (+3 more)
(+71 files in other folders)
